--- a/package.json
+++ b/package.json
@@ -7,35 +7,66 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "expo lint"
   },
   "jest": {
     "preset": "jest-expo"
   },
+  "eslintConfig": {
+    "extends": "universe"
+  },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.20",
-    "expo-font": "~12.0.8",
+    "axios": "^1.7.2",
+    "eslint-config-universe": "^13.0.0",
+    "expo": "~51.0.21",
+    "expo-checkbox": "~3.0.0",
+    "expo-file-system": "^17.0.1",
+    "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "^6.7.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-animated-loader": "^1.0.0",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-otp-timer": "^1.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-swiper": "^1.6.0",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-virtualized-view": "^1.0.0",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "expo-module-scripts": "^3.5.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
